tests/NormalTests/paczka1/fuzzy1/63922390.err
Error in line 23: S799 A849 95,9
Error in line 25: S799 A895 70,9
Error in line 32: S799 S249 25,2
